add video posters and mobile autoplay

--- a/styles/cases.css
+++ b/styles/cases.css
@@ -5,7 +5,7 @@
     width: 80vw;
     max-width: 1400px;
     min-height: min-content;
-    height: 80dvh;
+    height: 80lvh;
     max-height: 860px;
     box-sizing: border-box;
     border-radius: 32px;
